--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -241,13 +241,11 @@
 <!ENTITY Ctr_urlbardropm	"Aufklapp-Schaltfläche an die letztmögliche Position verschieben">
 <!ENTITY Ctr_urlbardropm2	"Aufklapp-Schaltfläche immer anzeigen">
 <!ENTITY Ctr_altreaderico	"Alternatives Symbol für die 'Lesemodus'-Schaltfläche">
-<!ENTITY Ctr_altautocompl	"Alternatives 'Autovervollständigungs'-Pop-up (experimentell)">
 <!ENTITY Ctr_hideprbutton	"'Infosymbol' verstecken (wenn ein Pop-up-Fenster blockiert wurde)">
-<!ENTITY Ctr_urlbar_uc		"'Vereinigte Autovervollständigung' deaktivieren (about:config-Einstellung)">
 <!ENTITY Ctr_locsearchbw10	"Höhe der Adress- und Suchleiste reduzieren (experimentell)">
 <!ENTITY Ctr_urlbar_ib		"Schaltfläche zur Webseitenidentität">
 <!ENTITY Ctr_ib_nohovcolor	"Graue Farbe beim 'Hovern' nicht anzeigen">
-<!ENTITY Ctr_ib_graycolor	"Graue Farbe für 'Chrome'-Seiten und Seiten mit unbekannter Identität">
+<!ENTITY Ctr_ib_graycolor	"Graue Farbe für 'about:'-Seiten und Seiten mit unbekannter Identität">
 <!ENTITY Ctr_verifiedcolors	"Farbig bei verifizierten Webseiten, sicheren und unsicheren Verbindungen">
 <!ENTITY Ctr_ibinfoico		"'i'-Symbol durch Globus-Symbol ersetzen">
 <!ENTITY Ctr_ibinfoico2		"'i'-Symbol verstecken (falls möglich)">
@@ -262,8 +260,11 @@
 <!ENTITY Ctr_icopageinfo	"Globus-/Lesezeichen-/'i'-Symbol: 'Seiteninfo'-Fenster per Klick öffnen">
 <!ENTITY Ctr_lbsbsize		"Benutzerdefinierte Breite für die Adressleiste und die Suchleiste">
 <!ENTITY Ctr_searchbar		"Suchleiste">
-<!ENTITY Ctr_lbsugresi		"Vorschläge im Aufklappmenü ohne Bildlaufleiste anzeigen (falls möglich)">
-<!ENTITY Ctr_lbsugres		"Anzahl der Vorschläge im Aufklappmenü (about:config-Einstellung)">
+<!ENTITY Ctr_autocomplete	"Autovervollständigungs-Pop-up">
+<!ENTITY Ctr_altautocompl	"Alternative Darstellung (experimentell)">
+<!ENTITY Ctr_urlbar_uc		"'Vereinigte Autovervollständigung' deaktivieren (about:config-Einstellung)">
+<!ENTITY Ctr_lbsugresi		"Höhenlimit deaktivieren">
+<!ENTITY Ctr_lbsugres		"Anzahl der Vorschläge (about:config-Einstellung)">
 
 <!ENTITY Ctr_menubar_items	"Position der Menüeinträge">
 <!ENTITY Ctr_extrabar		"Extraleisten">
@@ -371,7 +372,7 @@
 
 <!ENTITY Ctr_special_font	"Hintergrundfarbeinstellungen sind nur für das Standard-Thema vorhanden!">
 <!ENTITY Ctr_special_info	"Einige Optionen haben nur in bestimmten Fällen sichtbare Auswirkungen!">
-<!ENTITY Ctr_special_info2	"Diese Einstellungen sind für das Standard-Thema und funktionieren evtl. nicht mit allen Themen!">
+<!ENTITY Ctr_special_info2	"Vollständiges 'Thema' erkannt! Einige Einstellungen funktionieren nicht mit Themen!">
 <!ENTITY Ctr_support		"Hilfe-Forum">
 <!ENTITY Ctr_newversion		"Neue Version?">
 
