--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -241,9 +241,7 @@
 <!ENTITY Ctr_urlbardropm	"Liiguta rippmenüü avamise nupp võimalikult lõppu">
 <!ENTITY Ctr_urlbardropm2	"Tee rippmenüü avamise nupp alati nähtavaks">
 <!ENTITY Ctr_altreaderico	"Alternatiivsed 'Lugemisvaate' ikoonid">
-<!ENTITY Ctr_altautocompl	"Alternatiivne aadressiriba automaatlõpetamise hüpik (katsejärgus)">
 <!ENTITY Ctr_hideprbutton	"Peida blokeeritud hüpikakende teavitusikoon">
-<!ENTITY Ctr_urlbar_uc		"Keela ühendatud automaatlõpetamise funktsioon 'Unified autocomplete' (about:config eelistus)">
 <!ENTITY Ctr_locsearchbw10	"Vähenda aadressiriba ja otsinguriba kõrgust (katsejärgus)">
 <!ENTITY Ctr_urlbar_ib		"Saidi identiteedi nupp (identiteedi kast)">
 <!ENTITY Ctr_ib_nohovcolor	"Hiirekursoriga ikooni peale minnes ära näita halli taustavärvi">
@@ -262,8 +260,11 @@
 <!ENTITY Ctr_icopageinfo	"Lehe/gloobuse/'i'-ikoon: nendel klõpsamine avab akna 'veebilehe teave'">
 <!ENTITY Ctr_lbsbsize		"Aadressiriba ja otsinguriba kohandatud laius">
 <!ENTITY Ctr_searchbar		"Otsinguriba">
-<!ENTITY Ctr_lbsugresi		"Näita soovituste menüüs võimalikult palju tulemusi (ilma kerimisriba näitamata)">
-<!ENTITY Ctr_lbsugres		"Soovituste hüpikul kuvatavate tulemuste arv (about:config eelistus)">
+<!ENTITY Ctr_autocomplete	"Autocomplete popup">
+<!ENTITY Ctr_altautocompl	"Alternative appearance (experimental)">
+<!ENTITY Ctr_urlbar_uc		"Keela ühendatud automaatlõpetamise funktsioon 'unified autocomplete' (about:config eelistus)">
+<!ENTITY Ctr_lbsugresi		"Disable height limit">
+<!ENTITY Ctr_lbsugres		"Number of results (about:config preference)">
 
 <!ENTITY Ctr_menubar_items	"Menüükirjete asukoht">
 <!ENTITY Ctr_extrabar		"Lisa-tööriistaribad">
