--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -241,9 +241,7 @@
 <!ENTITY Ctr_urlbardropm	"Déplacer la liste déroulante à la dernière position possible">
 <!ENTITY Ctr_urlbardropm2	"Rendre le bouton de liste déroulante toujours visible">
 <!ENTITY Ctr_altreaderico	"Utiliser des icônes alternatives pour le « mode lecture »">
-<!ENTITY Ctr_altautocompl	"« Fenêtre surgissante d'autocomplétion » alternative (expérimental)">
 <!ENTITY Ctr_hideprbutton	"Masquer l'icône de notification lorsqu'une fenêtre surgissante est bloquée">
-<!ENTITY Ctr_urlbar_uc		"Désactiver la fonctionnalité « Autocomplétion unifiée » (paramètre about:config)">
 <!ENTITY Ctr_locsearchbw10	"Réduire la hauteur des barres d'adresse et de recherche (expérimental)">
 <!ENTITY Ctr_urlbar_ib		"Bouton d'identité des sites (boite d'identité)">
 <!ENTITY Ctr_ib_nohovcolor	"Ne pas afficher la couleur grise lors du survol">
@@ -262,8 +260,11 @@
 <!ENTITY Ctr_icopageinfo	"Favicon/globe/icône « i » : ouvrir la fenêtre « Informations sur la page » en cliquant sur l'icône">
 <!ENTITY Ctr_lbsbsize		"Personnaliser la largeur de la barre d'adresse et/ou de la barre de recherche">
 <!ENTITY Ctr_searchbar		"Barre de recherche">
-<!ENTITY Ctr_lbsugresi		"Afficher autant de résultats que possible (sans barre de défilement) dans le menu déroulant des suggestions">
-<!ENTITY Ctr_lbsugres		"Nombre de résultats dans le menu déroulant des suggestions (paramètre about:config) :">
+<!ENTITY Ctr_urlbar_uc		"Désactiver la fonctionnalité « Autocomplétion unifiée » (paramètre about:config)">
+<!ENTITY Ctr_autocomplete	"Autocomplete popup">
+<!ENTITY Ctr_altautocompl	"Alternative appearance (experimental)">
+<!ENTITY Ctr_lbsugresi		"Disable height limit">
+<!ENTITY Ctr_lbsugres		"Number of results (about:config preference)">
 
 <!ENTITY Ctr_menubar_items	"Position des éléments de menu :">
 <!ENTITY Ctr_extrabar		"Barres d'outils supplémentaires :">
