--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -241,9 +241,7 @@
 <!ENTITY Ctr_urlbardropm	"Tłóčatko šipkoweho kónčka do poslednjeje móžneje pozicije přesunyć">
 <!ENTITY Ctr_urlbardropm2	"Tłóčatko šipkoweho kónčka přeco pokazać">
 <!ENTITY Ctr_altreaderico	"Alternatiwne 'čitakowe' symbole">
-<!ENTITY Ctr_altautocompl	"Alternatiwne wuskakowace wokno 'awtowudospołnjenje' (eksperimentelne)">
 <!ENTITY Ctr_hideprbutton	"Zdźělenski symbol schować, hdyž so wuskakowace wokno blokuje">
-<!ENTITY Ctr_urlbar_uc		"Funkciju 'Zjednoćene awtowudospołnjenje' znjemóžnić (nastajenje about:config)">
 <!ENTITY Ctr_locsearchbw10	"Wysokosć adresowych a pytanskich polow redukować (eksperimentelne)">
 <!ENTITY Ctr_urlbar_ib		"Tłóčatko sydłoweje identity">
 <!ENTITY Ctr_ib_nohovcolor	"Pod kursorom myški šěru barbu njepokazać">
@@ -262,8 +260,11 @@
 <!ENTITY Ctr_icopageinfo	"Faworitowy symbol/globusowy symbol/'i'-symbol: 'Kliknjenje' wokno 'Info wo stronje' wočinja">
 <!ENTITY Ctr_lbsbsize		"Swójska šěrokosć za adresowe polo a pytanske polo">
 <!ENTITY Ctr_searchbar		"Pytanske polo">
-<!ENTITY Ctr_lbsugresi		"Tak wjele wuslědkow kaž móžno we wuskakowacym meniju namjetow pokazać (bjez suwanskeje lajsty)">
-<!ENTITY Ctr_lbsugres		"Ličba wuslědkow we wuskakowacym meniju namjetow (nastajenje about:config)">
+<!ENTITY Ctr_autocomplete	"Autocomplete popup">
+<!ENTITY Ctr_altautocompl	"Alternative appearance (experimental)">
+<!ENTITY Ctr_urlbar_uc		"Funkciju 'Zjednoćene awtowudospołnjenje' znjemóžnić (nastajenje about:config)">
+<!ENTITY Ctr_lbsugresi		"Disable height limit">
+<!ENTITY Ctr_lbsugres		"Number of results (about:config preference)">
 
 <!ENTITY Ctr_menubar_items	"Pozicija menijowych zapiskow">
 <!ENTITY Ctr_extrabar		"Přidatne symbolowe lajsty">
