--- a/xpi/locale/ru/options.dtd
+++ b/xpi/locale/ru/options.dtd
@@ -241,9 +241,7 @@
 <!ENTITY Ctr_urlbardropm	"Переместить дропмаркер до последней возможной позиции">
 <!ENTITY Ctr_urlbardropm2	"Всегда показывать дропмаркер">
 <!ENTITY Ctr_altreaderico	"Альтернативный значок «Чтения»">
-<!ENTITY Ctr_altautocompl	"Альтернативное «всплывающее меню автозаполнения» (экспериментально)">
 <!ENTITY Ctr_hideprbutton	"Скрыть значок уведомления, когда блокируется всплывающее окно">
-<!ENTITY Ctr_urlbar_uc		"Отключить функцию «автозаполнение» (настройка about:config)">
 <!ENTITY Ctr_locsearchbw10	"Уменьшить высоту панелей адреса и поиска (экспериментально)">
 <!ENTITY Ctr_urlbar_ib		"Кнопка подлинности сайта">
 <!ENTITY Ctr_ib_nohovcolor	"Не показывать серый цвет при наведении">
@@ -262,8 +260,11 @@
 <!ENTITY Ctr_icopageinfo	"Фавикон/глобус/«i»-значок: при нажатии открывает окно «Информация о странице»">
 <!ENTITY Ctr_lbsbsize		"Пользовательская ширина строки адреса и поиска">
 <!ENTITY Ctr_searchbar		"Панель поиска">
-<!ENTITY Ctr_lbsugresi		"Показывать как можно больше поисковых предложений (без прокрутки)">
-<!ENTITY Ctr_lbsugres		"Количество результатов поисковых предложений (настройка about:config)">
+<!ENTITY Ctr_autocomplete	"Autocomplete popup">
+<!ENTITY Ctr_altautocompl	"Alternative appearance (experimental)">
+<!ENTITY Ctr_urlbar_uc		"Отключить функцию «автозаполнение» (настройка about:config)">
+<!ENTITY Ctr_lbsugresi		"Disable height limit">
+<!ENTITY Ctr_lbsugres		"Number of results (about:config preference)">
 
 <!ENTITY Ctr_menubar_items	"Позиция пунктов меню">
 <!ENTITY Ctr_extrabar		"Дополнительные панели инструментов">
