--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -241,9 +241,7 @@
 <!ENTITY Ctr_urlbardropm	"Flyt rullemenu-pilen til den sidst mulige position">
 <!ENTITY Ctr_urlbardropm2	"Make dropmarker always visible">
 <!ENTITY Ctr_altreaderico	"Alternative 'Læser'-ikoner">
-<!ENTITY Ctr_altautocompl	"Alternative 'autocomplete popup' (experimental)">
 <!ENTITY Ctr_hideprbutton	"Skjul notifikationsikonet når en popup blokeres">
-<!ENTITY Ctr_urlbar_uc		"Disable 'Unified autocomplete' feature (about:config preference)">
 <!ENTITY Ctr_locsearchbw10	"Reducér adresselinjers og søgelinjers højde (eksperimentel)">
 <!ENTITY Ctr_urlbar_ib		"Knappen Identitet for websted (Identitet boks)">
 <!ENTITY Ctr_ib_nohovcolor	"Vis ikke grå farve når der peges på">
@@ -262,8 +260,11 @@
 <!ENTITY Ctr_icopageinfo	"Favicon/globe-/'i'-icon: 'click' opens 'page info window'">
 <!ENTITY Ctr_lbsbsize		"Brugerdefineret brede for adresselinje og søgelinje">
 <!ENTITY Ctr_searchbar		"Søgelinje">
-<!ENTITY Ctr_lbsugresi		"Vis så mange resultater som muligt i forslag-popup (uden rullepanel)">
-<!ENTITY Ctr_lbsugres		"Antal resultater i forslag-popup (about:config-indstilling)">
+<!ENTITY Ctr_autocomplete	"Autocomplete popup">
+<!ENTITY Ctr_altautocompl	"Alternative appearance (experimental)">
+<!ENTITY Ctr_urlbar_uc		"Disable 'unified autocomplete' feature (about:config preference)">
+<!ENTITY Ctr_lbsugresi		"Disable height limit">
+<!ENTITY Ctr_lbsugres		"Number of results (about:config preference)">
 
 <!ENTITY Ctr_menubar_items	"Placering af menupunkter">
 <!ENTITY Ctr_extrabar		"Yderligere værktøjslinjer">
