--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -241,9 +241,7 @@
 <!ENTITY Ctr_urlbardropm	"尽可能移动下拉按钮到最后的位置">
 <!ENTITY Ctr_urlbardropm2	"下拉按钮总是可见">
 <!ENTITY Ctr_altreaderico	"备选的 “阅读模式” 图标">
-<!ENTITY Ctr_altautocompl	"备选的 “自动完成弹出框” (实验性)">
 <!ENTITY Ctr_hideprbutton	"当弹出窗口被阻止时隐藏通知图标">
-<!ENTITY Ctr_urlbar_uc		"禁用 “统一自动完成” 功能 (about:config 选项)">
 <!ENTITY Ctr_locsearchbw10	"减小地址栏与搜索栏高度(实验性)">
 <!ENTITY Ctr_urlbar_ib		"网站身份标识按钮 (身份标识框)">
 <!ENTITY Ctr_ib_nohovcolor	"鼠标悬停时不显示灰色">
@@ -262,8 +260,11 @@
 <!ENTITY Ctr_icopageinfo	"网站图标/地球/“i”图标: “点击” 打开 “页面信息窗口”">
 <!ENTITY Ctr_lbsbsize		"自定义地址栏和搜索栏的宽度">
 <!ENTITY Ctr_searchbar		"搜索栏">
-<!ENTITY Ctr_lbsugresi		"尽可能在建议弹出框中多显示结果 (不带滚动条)">
-<!ENTITY Ctr_lbsugres		"建议弹出框中的结果个数(about:config 选项)">
+<!ENTITY Ctr_autocomplete	"Autocomplete popup">
+<!ENTITY Ctr_altautocompl	"Alternative appearance (experimental)">
+<!ENTITY Ctr_urlbar_uc		"禁用 “统一自动完成” 功能 (about:config 选项)">
+<!ENTITY Ctr_lbsugresi		"Disable height limit">
+<!ENTITY Ctr_lbsugres		"Number of results (about:config preference)">
 
 <!ENTITY Ctr_menubar_items	"菜单项目位置">
 <!ENTITY Ctr_extrabar		"附加工具栏">
