--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -260,11 +260,11 @@
 <!ENTITY Ctr_icopageinfo	"Ikona zaznamke/sveta/'i': 'klik' odpre 'okno s podatki o strani'">
 <!ENTITY Ctr_lbsbsize		"Prilagodljiva širina naslovne in iskalne vrstice">
 <!ENTITY Ctr_searchbar		"Iskalna vrstica">
-<!ENTITY Ctr_autocomplete	"Autocomplete popup">
-<!ENTITY Ctr_altautocompl	"Alternative appearance (experimental)">
-<!ENTITY Ctr_urlbar_uc		"Onemogoči značilnost 'poenotenega samodokončavanja' (možnost about:config)">
-<!ENTITY Ctr_lbsugresi		"Disable height limit">
-<!ENTITY Ctr_lbsugres		"Number of results (about:config preference)">
+<!ENTITY Ctr_autocomplete	"Pojavno okno samodokončevanja">
+<!ENTITY Ctr_altautocompl	"Nadomestni videz (preskusno)">
+<!ENTITY Ctr_urlbar_uc		"Onemogoči značilnost 'poenotenega samodokončevanja' (možnost about:config)">
+<!ENTITY Ctr_lbsugresi		"Onemogoči omejitev višine">
+<!ENTITY Ctr_lbsugres		"Število rezultatov (možnost about:config)">
 
 <!ENTITY Ctr_menubar_items	"Položaj predmetov menija">
 <!ENTITY Ctr_extrabar		"Dodatne orodne vrstice">
