--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -36,7 +36,7 @@
 <!ENTITY Ctr_tabs1m			"Karty prostokątne (w stylu Australis)">
 <!ENTITY Ctr_tabs2			"Karty zaokrąglone (alternatywne)">
 <!ENTITY Ctr_tabs3			"Karty zaokrąglone (alternatywne Aero)">
-<!ENTITY Ctr_tabforminfo	"Wygląd karty jest kontrolowany przez obecny styl.">
+<!ENTITY Ctr_tabforminfo	"Wygląd karty jest kontrolowany przez bieżący motyw.">
 <!ENTITY Ctr_coltabsinfo	"Wygląd karty nie jest w pełni kompatybilny z dodatkiem 'ColorfulTabs'!">
 <!ENTITY Ctr_tabsontop0		"Karty na górze (domyślne)">
 <!ENTITY Ctr_tabsontop1		"Karty na górze --- atrybut [tabsontop=true]">
@@ -260,11 +260,11 @@
 <!ENTITY Ctr_icopageinfo	"Ikona ulubionych/globu/'i': 'kliknięcie' otwiera 'okno informacji o stronie'">
 <!ENTITY Ctr_lbsbsize		"Niestandardowa szerokość paska adresu i paska wyszukiwania">
 <!ENTITY Ctr_searchbar		"Pasek wyszukiwania">
-<!ENTITY Ctr_autocomplete	"Autocomplete popup">
-<!ENTITY Ctr_altautocompl	"Alternative appearance (experimental)">
+<!ENTITY Ctr_autocomplete	"Menu podręczne autouzupełniania">
+<!ENTITY Ctr_altautocompl	"Alternatywny wygląd (eksperymentalne)">
 <!ENTITY Ctr_urlbar_uc		"Wyłącz funkcję 'ujednolicone autouzupełnianie' (ustawienie about:config)">
-<!ENTITY Ctr_lbsugresi		"Disable height limit">
-<!ENTITY Ctr_lbsugres		"Number of results (about:config preference)">
+<!ENTITY Ctr_lbsugresi		"Wyłącz ograniczenie wysokości">
+<!ENTITY Ctr_lbsugres		"Liczba wyników (ustawienie about:config)">
 
 <!ENTITY Ctr_menubar_items	"Pozycje elementów menu">
 <!ENTITY Ctr_extrabar		"Dodatkowe paski narzędzi">
@@ -370,9 +370,9 @@
 <!ENTITY Ctr_pw_set_syncon	"Dodaj do Sync">
 <!ENTITY Ctr_pw_set_syncoff	"Usuń z Sync">
 
-<!ENTITY Ctr_special_font	"Ustawienia koloru tła są tylko dla domyślnego stylu!">
+<!ENTITY Ctr_special_font	"Ustawienia koloru tła są tylko dla domyślnego motywu!">
 <!ENTITY Ctr_special_info	"Niektóre opcje mogą nie oferować widocznych zmian we wszystkich przypadkach">
-<!ENTITY Ctr_special_info2	"Ustawienia są stworzone dla domyślnego stylu programu &brandShortName;, więc mogą nie działać z innymi stylami!">
+<!ENTITY Ctr_special_info2	"Wykryto motyw autorstwa osób trzecich! Niektóre opcje nie działają z motywami autorstwa osób trzecich!">
 <!ENTITY Ctr_support		"Forum wsparcia">
 <!ENTITY Ctr_newversion		"Nowa wersja?">
 
