--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -245,7 +245,7 @@
 <!ENTITY Ctr_locsearchbw10	"Vähenda aadressiriba ja otsinguriba kõrgust (katsejärgus)">
 <!ENTITY Ctr_urlbar_ib		"Saidi identiteedi nupp (identiteedi kast)">
 <!ENTITY Ctr_ib_nohovcolor	"Hiirekursoriga ikooni peale minnes ära näita halli taustavärvi">
-<!ENTITY Ctr_ib_graycolor	"Hall värvus tundmatu identiteedi ja chrome-lehtede jaoks">
+<!ENTITY Ctr_ib_graycolor	"Hall värvus tundmatu identiteedi ja 'about:'-lehtede korral">
 <!ENTITY Ctr_verifiedcolors	"Verifitseeritud veebisaitide ning turvaliste ja ebaturvaliste ühenduste nupuvärvid">
 <!ENTITY Ctr_ibinfoico		"Asenda 'i'-ikoon gloobuse ikooniga">
 <!ENTITY Ctr_ibinfoico2		"Peida 'i'-ikoon (kui võimalik)">
@@ -260,11 +260,11 @@
 <!ENTITY Ctr_icopageinfo	"Lehe/gloobuse/'i'-ikoon: nendel klõpsamine avab akna 'veebilehe teave'">
 <!ENTITY Ctr_lbsbsize		"Aadressiriba ja otsinguriba kohandatud laius">
 <!ENTITY Ctr_searchbar		"Otsinguriba">
-<!ENTITY Ctr_autocomplete	"Autocomplete popup">
-<!ENTITY Ctr_altautocompl	"Alternative appearance (experimental)">
+<!ENTITY Ctr_autocomplete	"Automaatlõpetamise hüpik">
+<!ENTITY Ctr_altautocompl	"Alternatiivne välimus (katsejärgus)">
 <!ENTITY Ctr_urlbar_uc		"Keela ühendatud automaatlõpetamise funktsioon 'unified autocomplete' (about:config eelistus)">
-<!ENTITY Ctr_lbsugresi		"Disable height limit">
-<!ENTITY Ctr_lbsugres		"Number of results (about:config preference)">
+<!ENTITY Ctr_lbsugresi		"Keela kõrguse piirang">
+<!ENTITY Ctr_lbsugres		"Tulemuste arv (about:config eelistus)">
 
 <!ENTITY Ctr_menubar_items	"Menüükirjete asukoht">
 <!ENTITY Ctr_extrabar		"Lisa-tööriistaribad">
@@ -372,7 +372,7 @@
 
 <!ENTITY Ctr_special_font	"Taustavärvi sätted on ainult vaikimisi välimuse jaoks!">
 <!ENTITY Ctr_special_info	"Mõned sätted ei pruugi alati nähtavaid muudatusi pakkuda">
-<!ENTITY Ctr_special_info2	"Sätted on mõeldud &brandShortName;i vaikimisi välimuse jaoks ja ei pruugi kõigi kolmandate osapoolte välimustega töötada!">
+<!ENTITY Ctr_special_info2	"Tuvastati kolmanda osapoole välimus! Mõned sätted ei tööta kolmandate osapoolte välimustega!">
 <!ENTITY Ctr_support		"Kasutajatoe foorum">
 <!ENTITY Ctr_newversion		"Uus versioon?">
 
