--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -159,8 +159,8 @@
 <!ENTITY Ctr_cpanelmenus	"面板菜单: 更紧凑的视图 (书签、历史等等)">
 <!ENTITY Ctr_hidezoomres	"当缩放控制按钮在工具栏上时: 隐藏重置缩放按钮">
 <!ENTITY Ctr_alt_newtabp	"新标签页页面 (about:newtab): 备选的外观">
-<!ENTITY Ctr_nosnippets		"Start page (about:home): hide snippets">
-<!ENTITY Ctr_search_ui		"Search">
+<!ENTITY Ctr_nosnippets		"开始页面 (about:home): 隐藏片断">
+<!ENTITY Ctr_search_ui		"搜索">
 <!ENTITY Ctr_ctroldsearch	"旧式搜索">
 <!ENTITY Ctr_ctroldsearchc	"搜索后清除搜索框">
 <!ENTITY Ctr_search_oit		"在新标签页中搜索 (about:config 选项)">
@@ -184,7 +184,7 @@
 <!ENTITY Ctr_bmbutpanelm	"弹出式菜单: 面板式菜单外观">
 <!ENTITY Ctr_bmbunsortbm	"弹出式菜单: “未分类书签”子菜单">
 <!ENTITY Ctr_bmbunsortbm2	"菜单在书签之上">
-<!ENTITY Ctr_bmbviewbmsb	"Popup: show 'View Sidebar'">
+<!ENTITY Ctr_bmbviewbmsb	"弹出式菜单: 显示“查看侧边栏”">
 <!ENTITY Ctr_bmbviewbmtb	"弹出式菜单: 显示“查看工具栏”">
 <!ENTITY Ctr_bmbnounsort	"弹出式菜单: 隐藏“未分类书签”">
 <!ENTITY Ctr_bmbutnotext	"隐藏书签工具栏上的文本标签">
@@ -260,11 +260,11 @@
 <!ENTITY Ctr_icopageinfo	"网站图标/地球/“i”图标: “点击” 打开 “页面信息窗口”">
 <!ENTITY Ctr_lbsbsize		"自定义地址栏和搜索栏的宽度">
 <!ENTITY Ctr_searchbar		"搜索栏">
-<!ENTITY Ctr_autocomplete	"Autocomplete popup">
-<!ENTITY Ctr_altautocompl	"Alternative appearance (experimental)">
+<!ENTITY Ctr_autocomplete	"自动完成弹出框">
+<!ENTITY Ctr_altautocompl	"备选的外观(实验性)">
 <!ENTITY Ctr_urlbar_uc		"禁用 “统一自动完成” 功能 (about:config 选项)">
-<!ENTITY Ctr_lbsugresi		"Disable height limit">
-<!ENTITY Ctr_lbsugres		"Number of results (about:config preference)">
+<!ENTITY Ctr_lbsugresi		"禁用高度限制">
+<!ENTITY Ctr_lbsugres		"结果数量 (about:config 选项)">
 
 <!ENTITY Ctr_menubar_items	"菜单项目位置">
 <!ENTITY Ctr_extrabar		"附加工具栏">
